# Pololib

./: README.md
pololib/: CMakeLists.txt
pololib/core/: CMakeLists.txt
pololib/core/include/core/: application.h  base_graphics_context.h  base_window.h
pololib/core/include/core/commands/: base_command.h  command_system.h
pololib/core/include/core/debug/: assert_macros.h  log_macros.h  logger.h
pololib/core/include/core/events/: base_event.h  event_system.h
pololib/core/include/core/layers/: base_layer.h  layer_stack.h
pololib/core/src/: application.cpp  base_window.cpp
pololib/core/src/commands/: command_system.cpp
pololib/core/src/debug/: logger.cpp
pololib/core/src/events/: base_event.cpp  event_system.cpp
pololib/core/src/layers/: layer_stack.cpp
pololib/dbg/include/dbg/: logs.h
pololib/dbg/src/: logger.cpp
pololib/platform/: CMakeLists.txt
pololib/platform/include/platform/windows/: wnd_window.h
pololib/platform/src/: window_factory.cpp
pololib/platform/src/windows/: wnd_window.cpp
pololib/renderer/: CMakeLists.txt
pololib/renderer/include/graphics/opengl/: opengl_context.h
pololib/renderer/src/opengl/: opengl_context.cpp
